update crud logic
