# internal/product/controller/http_router/http_router.go
@@ -24,16 +24,18 @@ func ProductRouter(r *gin.Engine, uc *usecase.UseCase, cfgRatelimit ratelimit.Co
 	// Handlers
 	v1Handler := ver1.New(uc)
 
-	applesGroupNoJwt := v1Group.Group("/pineapple")
-	// No JWT Auth middleware
-	applesGroupNoJwt.POST("/create_pineapple", v1Handler.CreatePineapple) // POST /api/v1/pineapple/create_pineapple
-	applesGroupNoJwt.GET("/get_pineapple/:id", v1Handler.GetPineapple)    // GET /api/v1/pineapple/get_pineapple/{id}
+	applesGroupJwt := v1Group.Group("/pineapple")
 
-	applesGroup := v1Group.Group("/apples")
-	applesGroup.POST("/create_apple", v1Handler.CreateApple) // POST /api/v1/apples/create_apple
-	applesGroup.GET("/get_apple/:id", v1Handler.GetApple)    // GET /api/v1/apples/get_apple/{id}
 	// JWT Auth middleware
-	applesGroup.Use(jwt.JWTAuth(uc.GetTokenManager()))
+	applesGroupJwt.Use(jwt.JWTAuth(uc.GetTokenManager()))
+	applesGroupJwt.POST("/create_pineapple", v1Handler.CreatePineapple) // POST /api/v1/pineapple/create_pineapple
+	applesGroupJwt.GET("/get_pineapple/:id", v1Handler.GetPineapple)    // GET /api/v1/pineapple/get_pineapple/{id}
+
+	// No JWT Auth middleware
+	applesGroup := v1Group.Group("/apples")
+	applesGroup.POST("/create_apple", v1Handler.CreateApple)       // POST /api/v1/apples/create_apple
+	applesGroup.GET("/get_apple/:id", v1Handler.GetApple)          // GET /api/v1/apples/get_apple/{id}
 	applesGroup.PUT("/update_apple/:id", v1Handler.UpdateApple)    // PUT /api/v1/apples/update_apple/{id}
 	applesGroup.DELETE("/delete_apple/:id", v1Handler.DeleteApple) // DELETE /api/v1/apples/delete_apple/{id}
+
 }
