# internal/product/controller/http_router/v1/get_pineapple.go
@@ -12,6 +12,7 @@ import (
 // @Tags pineapple
 // @Accept json
 // @Produce json
+// @Security BearerAuth
 // @Param id path string true "ID"
 // @Success 200 {object} map[string]string "status: Pineapple"
 // @Failure 400 {object} map[string]string "invalid payload"
